Closed Bug 897850 Opened 11 years ago Closed 11 years ago

Fix order of "construct" and "hasInstance" comments.

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: n.nethercote, Assigned: n.nethercote)

Details

Attachments

(1 file)

Class::hasInstance comes before Class::construct, but lots of comments get them
round the wrong way when they're both NULL, presumably because someone got it
wrong and then everyone else copied and pasted.
Comment on attachment 780797 [details] [diff] [review]
Fix order of "construct" and "hasInstance" comments.

Review of attachment 780797 [details] [diff] [review]:
-----------------------------------------------------------------

I can see how having call and construct next to each other makes some sense.
Attachment #780797 - Flags: review?(evilpies) → review+
https://hg.mozilla.org/mozilla-central/rev/6089b164088d
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: