Bug 897850 - Fix order of "construct" and "hasInstance" comments.  r=evilpie.  DONTBUILD